[project]
authors = [
    {name = "Dmitry Vdovin", email = "dm3vdovin@gmail.com"},
]
requires-python = "<4.0,>=3.12"
name = "hexlet-code"
version = "0.1.0"
description = "Example application"
readme = "README.md"

[dependency-groups]
dev = [
    "ruff>=0.15.0"
]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]